Can't add X-Axis Mirror to quick favorites #64102

Closed
opened 2019-05-03 12:35:35 +02:00 by Sebastian Parborg · 3 comments

System Information
Operating system: Linux-5.0.11-gentoo-x86_64-Intel-R-_Core-TM-i7-7700K_CPU@_4.20GHz-with-gentoo-2.6 64 Bits
Graphics card: Radeon RX Vega (VEGA10, DRM 3.27.0, 5.0.11-gentoo, LLVM 8.0.0) X.Org 4.5 (Core Profile) Mesa 19.0.3

Blender Version
Broken: version: 2.80 (sub 60), branch: master (modified), commit date: 2019-05-03 07:41, hash: 688c7240be
Worked: (optional)

Short description of error
Can't assign "X-Axis Mirror" to quick favorites menu.

Exact steps for others to reproduce the error

  1. Open the default cube file

  2. Add an armature and go into pose mode

  3. Got to the pose mode option in the "Active Tool" tab

  4. Right click on the "X-Axis Mirror" option.

  5. Notice that there is no option to add it to the quick (Q) menu

  6. Open up blender/windowmanager/intern/wm_operators.c:465 and change object to active_object and recomplie

  7. Notice that the option to add it to the quick menu now works and the shortcut also functions as expected.

**System Information** Operating system: Linux-5.0.11-gentoo-x86_64-Intel-R-_Core-TM-_i7-7700K_CPU_@_4.20GHz-with-gentoo-2.6 64 Bits Graphics card: Radeon RX Vega (VEGA10, DRM 3.27.0, 5.0.11-gentoo, LLVM 8.0.0) X.Org 4.5 (Core Profile) Mesa 19.0.3 **Blender Version** Broken: version: 2.80 (sub 60), branch: master (modified), commit date: 2019-05-03 07:41, hash: `688c7240be` Worked: (optional) **Short description of error** Can't assign "X-Axis Mirror" to quick favorites menu. **Exact steps for others to reproduce the error** 1. Open the default cube file 2. Add an armature and go into pose mode 3. Got to the pose mode option in the "Active Tool" tab 4. Right click on the "X-Axis Mirror" option. 5. Notice that there is no option to add it to the quick (Q) menu 6. Open up `blender/windowmanager/intern/wm_operators.c:465` and change `object` to `active_object` and recomplie 7. Notice that the option to add it to the quick menu now works and the shortcut also functions as expected.
Author
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-05-03 12:35:51 +02:00

This issue was referenced by 80cd292381

This issue was referenced by 80cd292381cb599115782dc98f5999a2fbbe4d67

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64102
No description provided.