Fix T64102: Can't add X-Mirror to quick favorites